syntax = "proto3";

option java_multiple_files = true;
option java_package = "home.work";
option java_outer_classname = "ControlDevicesProto";

package devices;

service ControlDevices {
    rpc SetTemperature (SetTemperatureRequest) returns (SetTemperatureReply) {}
    rpc GetTemperature (GetTemperatureRequest) returns (GetTemperatureReply) {}
}

message SetTemperatureRequest {
    string id = 1;
    float temperature = 2; 

}

message GetTemperatureRequest {
    string id = 1;

}

message SetTemperatureReply {
    string id = 1;
    float temperature = 2;
}

message GetTemperatureReply {
    float temperature = 1; 
}